--- a/frontend/src/components/Detail.css
+++ b/frontend/src/components/Detail.css
@@ -6,10 +6,10 @@
   font-size: var(--font-text-size-mobile);
   padding: 3px;
   margin: 2px;
-  border: 1px solid black;
-  background-color: rgba(128, 128, 128, 0.205);
+  background-color: var(--color-text-error);
   border-radius: 3px;
   cursor: pointer;
+  border: none;
 }
 
 .dark .detailMovie p {
