--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,8 +12,8 @@
   --font-text: "Poppins", sans-serif;
   --font-title-size: 1.4rem;
   --font-title: "Merriweather", serif;
-  --verde-claro: rgb(46, 255, 46);
-  --verde-oscuro: rgb(0, 177, 0);
+  --color-orange: #fb7b03;
+  --color-text-error : rgba(128, 128, 128, 0.205);
 }
 
 * {
