--- a/frontend/src/components/Movie.css
+++ b/frontend/src/components/Movie.css
@@ -1,13 +1,14 @@
-main {
+.Movie {
   min-height: 100vh;
+  max-width: 100%;
 }
 
-.Movie {
+.movie {
   display: flex;
   flex-flow: row nowrap;
 }
 
-.Movie img {
+.movie img {
   width: 13rem;
   height: 20rem;
   border-radius: 5px;
@@ -61,7 +62,6 @@ main {
 .infoPersons ul li:hover {
   color: var(--color-orange);
 }
-
 
 .detailMovie {
   max-height: 100%;
