--- a/frontend/src/components/movieInfo/Crew.css
+++ b/frontend/src/components/movieInfo/Crew.css
@@ -10,11 +10,11 @@
   font-size: var(--font-text-size-mobile);
   margin: 2px;
   padding: 3px;
-  background-color: rgba(128, 128, 128, 0.205);
+  background-color: var(--bg-black);
   border-radius: 3px;
   cursor: pointer;
 }
 
 .dark .crewInfo p {
-  background-color: rgba(226, 226, 226, 0.205);
+  background-color: var(--bg-white);
 }
