--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,23 +1,25 @@
-
 footer {
+  position: static;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer {
   align-items: center;
   color: black;
   display: flex;
   font-family: "Cinzel", serif;
   font-size: 0.6rem;
   justify-content: center;
-  left: 0;
   margin: 0;
   padding: 0;
-  position: static;
   text-align: center;
-  top: 0;
 }
 
 span {
   margin-left: 5px;
 }
 
-.dark footer {
+.dark .footer {
   color: white;
 }
