--- a/frontend/src/components/movieInfo/Detail.css
+++ b/frontend/src/components/movieInfo/Detail.css
@@ -6,12 +6,12 @@
   font-size: var(--font-text-size-mobile);
   padding: 3px;
   margin: 2px;
-  background-color: var(--color-text-error);
+  background-color: var(--bg-black);
   border-radius: 3px;
   cursor: pointer;
   border: none;
 }
 
 .dark .detailMovie p {
-  background-color: rgba(226, 226, 226, 0.205);
+  background-color: var(--bg-white);
 }
