--- a/frontend/src/components/movieInfo/Genred.css
+++ b/frontend/src/components/movieInfo/Genred.css
@@ -6,11 +6,11 @@
   font-size: var(--font-text-size-mobile);
   padding: 3px;
   margin: 2px;
-  background-color: rgba(128, 128, 128, 0.205);
+  background-color: var(--bg-black);
   border-radius: 3px;
   cursor: pointer;
 }
 
 .dark .genredInfo p {
-  background-color: rgba(226, 226, 226, 0.205);
+  background-color: var(--bg-white);
 }
