--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,3 +10,11 @@
 .App.light {
   background-color: white;
 }
+
+main {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: center;
+  min-height: calc(100vh - 120px);
+}
