--- a/frontend/src/components/breadcrumbs/Breadcrumbs.css
+++ b/frontend/src/components/breadcrumbs/Breadcrumbs.css
@@ -14,6 +14,9 @@
   margin-left: 2px;
   font-size: var(--font-text-size-mobile);
 }
+.nameTopic::first-letter {
+  text-transform: capitalize;
+}
 
 .dark .LINK {
   color: white;
