--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -9,7 +9,7 @@ footer {
   color: black;
   display: flex;
   font-family: "Cinzel", serif;
-  font-size: 0.6rem;
+  font-size: var(--font-text-footer);
   justify-content: center;
   margin: 0;
   padding: 0;
@@ -22,4 +22,15 @@ span {
 
 .dark .footer {
   color: white;
+}
+
+@media screen and (min-width: 900px) {
+  .footer {
+    margin-top: 20px;
+    font-size: var(--font-text-footer-desktop);
+  }
+  footer img {
+    width: 60px;
+    height: fit-content;
+  }
 }
